@@ -1,5 +1,11 @@
 2002-02-20  Johan Dahlin  <jdahlin@telia.com>
 
+	* bootstrap.py: use version from autoconf2.50 is it exists (which is
+	the case on debian systems)
+
+	* jhbuild.py: Add nicer output if the config file isn't found,
+	create $PREFIX/share and $PREFIX/share/aclocal if they don't exist
+
 	* module.py: strip out port when checking for cvs server in ~/.cvspass
 
 2002-02-20  James Henstridge  <james@daa.com.au>
